# TradingPilot

./: .gitignore  CLAUDE.md  NuGet.Config  README.md  SYSTEM_REFERENCE.md  TradingPilot.slnx  telerik-license.txt
.claude/: settings.local.json
docs/: profitability-gaps.md
etc/scripts/: initialize-solution.ps1  migrate-database.ps1
ml/: config.py  export_data.py  export_onnx.py  render_heatmap.py  requirements.txt  retrain.py  train.py
ml/daytrading/: backtest.py  backtest_config.json  compute_features.py  config.py  evaluate.py  evaluate_scanner.py  export_bars.py  requirements.txt  train.py
ml/l2/: config.py  train.py
src/TradingPilot.Application.Contracts/: TradingPilot.Application.Contracts.abppkg  (+4 more)
src/TradingPilot.Webull.Hook.Native/: .gitignore  CMakeLists.txt  build.bat  hook_native.cpp
test/: WebullApiTests.ps1  disasm_deep.ps1  disasm_sign.ps1  disasm_sign2.ps1  disasm_sign3.ps1  extract_proto.ps1  inject_and_capture.ps1  inject_and_dump.ps1  read_secret.ps1  test_all_endpoints.ps1  test_all_endpoints2.ps1  test_all_endpoints3.ps1  test_all_endpoints4.ps1  test_grpc.ps1  test_grpc2.ps1  test_grpc3.ps1  test_grpc4.ps1  test_grpc5.ps1  test_grpc6.ps1  test_grpc7.ps1  test_grpc_all_meta.ps1  test_grpc_bruteforce.ps1  test_grpc_endpoints.ps1  test_grpc_final.ps1  test_grpc_meta_only.ps1  test_grpc_secret2.ps1  test_grpc_sign_crack.ps1  test_grpc_sign_solved.ps1  test_grpc_sorted_all.ps1  test_grpc_with_secret.ps1  test_grpc_xsv.ps1  test_news.ps1  test_news2.ps1  test_news3.ps1  test_news4.ps1  test_news5.ps1  test_pagination.ps1
(+299 files in other folders)
